fixed sorting
