# backend/src/main/java/de/fraunhofer/iao/querimonia/rest/manager/filter/ResponseComponentFilter.java
@@ -1,19 +1,25 @@
 package de.fraunhofer.iao.querimonia.rest.manager.filter;
 
-import de.fraunhofer.iao.querimonia.exception.QuerimoniaException;
 import de.fraunhofer.iao.querimonia.response.component.ResponseComponent;
 import org.apache.commons.lang3.StringUtils;
-import org.springframework.http.HttpStatus;
 
 import java.util.Comparator;
 import java.util.Optional;
 import java.util.stream.Stream;
 
 /**
- * The filterclass for templates.
+ * The filter/sorter class for templates.
  */
 public class ResponseComponentFilter {
 
+  /**
+   * Checks if a response component contains certain keywords.
+   *
+   * @param responseComponent the component that gets checked.
+   * @param optionalKeywords  the keywords, if not present this will return true.
+   *
+   * @return true, if the keywords are either in the component text or not present.
+   */
   public static boolean filterByKeywords(ResponseComponent responseComponent, Optional<String[]>
       optionalKeywords) {
     // get stream of optional
@@ -21,56 +27,23 @@ public class ResponseComponentFilter {
     // look for all keywords
     return keywords
         .allMatch(keyword -> StringUtils.containsIgnoreCase(
-            responseComponent.getTemplateTexts().toString(), keyword));
+            responseComponent.getTemplateTexts().toString(), keyword)
+            || StringUtils.containsIgnoreCase(responseComponent.getComponentName(), keyword));
+
   }
 
   /**
    * This methods sorts by name or priority of the component.
    *
    * @param sortBy Is the variable of which aspect should be sorted.
+   *
    * @return Returns the sorted component.
    */
   public static Comparator<ResponseComponent> createTemplateComparator(Optional<String[]> sortBy) {
-    return (template1, template2) -> {
-      int compareValue = 0;
-
-      for (String sortAspect : sortBy.orElse(new String[] {"name_asc"})) {
-        if (!(sortAspect.endsWith("desc") || sortAspect.endsWith("asc"))) {
-          throw new QuerimoniaException(HttpStatus.BAD_REQUEST,
-              "Ungültiger Sortier-Parameter: " + sortAspect + "; Sortierparameter müssen mit "
-                  + "'desc' und 'asc' enden.", "Illegaler Parameter");
-        }
-        // get index where prefix starts
-        int indexOfPrefix = sortAspect.lastIndexOf('_');
-        // get aspect without prefix
-        String rawSortAspect = sortAspect.substring(0, indexOfPrefix);
-        switch (rawSortAspect) {
-          case "priority":
-            compareValue = Integer.compare(template1.getPriority(), template2.getPriority());
-            break;
-          case "name":
-            compareValue = template1.getComponentName().toLowerCase().compareTo(template2
-                .getComponentName().toLowerCase());
-            break;
-          default:
-            throw new QuerimoniaException(HttpStatus.BAD_REQUEST,
-                "Unbekannter Sortierparameter " + rawSortAspect, "Ungültige Anfrage");
-        }
-        // invert sorting if desc
-        if (sortAspect.substring(indexOfPrefix).equalsIgnoreCase("_desc")) {
-          compareValue *= -1;
-        }
-
-        if (compareValue != 0) {
-          // if difference is already found, don't continue comparing
-          // (the later the aspects are in the array, the less priority they have, so
-          // only continue on equal templates)
-          return compareValue;
-        }
-
-        // all sorting aspects where checked
-      }
-      return compareValue;
-    };
+    return new ComparatorBuilder<ResponseComponent>()
+        .append("name", ResponseComponent::getComponentName)
+        .append("id", ResponseComponent::getComponentId)
+        .append("priority", ResponseComponent::getPriority)
+        .build(sortBy.orElse(new String[] {"id_asc"}));
   }
 }
